Fix print syntax (add parens) and also add if DEBUGs.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -952,7 +952,7 @@
     "    \n",
     "    # Print to show progress while cell runs\n",
     "    if DEBUG:\n",
-    "        print 'Done for ' + car_maker"
+    "        print('Done for ' + car_maker)"
    ]
   },
   {
@@ -1209,7 +1209,8 @@
     "        df_tweets_car_maker[car_maker] == True)\n",
     "    car_maker_tweets_count.append(df_car_maker.count())\n",
     "    # Print to show progress\n",
-    "    print 'Done for ' + car_maker"
+    "    if DEBUG:\n",
+    "        print('Done for ' + car_maker)"
    ]
   },
   {
@@ -1356,7 +1357,8 @@
     "                                    p_car_maker_gender_data_female])\n",
     "    car_maker_gender_data.unpersist()\n",
     "    # Print to show status\n",
-    "    print 'Done for ' + car_maker"
+    "    if DEBUG:\n",
+    "        print('Done for ' + car_maker)"
    ]
   },
   {
@@ -1448,7 +1450,7 @@
     "        car_maker_insight_data.unpersist()\n",
     "        # Print to show status\n",
     "        if DEBUG:\n",
-    "            print 'Done for ' + car_maker\n",
+    "            print('Done for ' + car_maker)\n",
     "    return car_maker_result_list"
    ]
   },
