Fix more print statements for py3.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -933,7 +933,7 @@
     "# data frame according to the posting time of the tweets.\n",
     "\n",
     "if DEBUG:\n",
-    "    print 'Calculating the number of tweets over 2015 for each car maker:'\n",
+    "    print('Calculating the number of tweets over 2015 for each car maker:')\n",
     "\n",
     "car_maker_results_list = []\n",
     "for car_maker in car_makers_name_list:\n",
