Fix an extra line continuation backslash.
This seemed to break py3, but not py2.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -1026,11 +1026,11 @@
     "stop_words.add(\"will\")\n",
     "\n",
     "tagsRDD = df_tweets_debacle.flatMap(\n",
-    "    lambda t: re.split(\"\\s\", t.MESSAGE_BODY))\\\n",
-    "    .filter(lambda word: not word.startswith(\"http\") and\n",
-    "            all(ord(c) < 128 for c in word) and\n",
-    "            word not in stop_words and\n",
-    "            len(word) > 3).map(\n",
+    "    lambda t: re.split(\"\\s\", t.MESSAGE_BODY)).filter(\n",
+    "    lambda word: not word.startswith(\"http\") and \n",
+    "    all(ord(c) < 128 for c in word) and \n",
+    "    word not in stop_words and\n",
+    "    len(word) > 3).map(\n",
     "    lambda word: (word, 1)).reduceByKey(add, 10).map(\n",
     "    lambda (a, b): (b, a)).sortByKey(False).map(\n",
     "    lambda (a, b): (b, a))\n",
