Fix noqa that showed up in the output. Fix long line there.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -1418,7 +1418,8 @@
     "variable of the people who tweeted about a certain car maker. The\n",
     "influence varable is calculated by:\n",
     "\n",
-    "$$Influence = ( \\space num \\space of \\space followers + \\space number \\space of \\space friends \\space ) \\div 2$$  # noqa\n",
+    "$$Influence = ( \\space num \\space of \\space followers +\n",
+    "\\space number \\space of \\space friends \\space ) \\div 2$$\n",
     "\n",
     "The influence score gives an indication whether someone is a famous\n",
     "person or a public figure in society or whether the twitter account\n",
