--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -269,7 +269,7 @@
     "# credentials. These were set in the first input cell to make them obvious\n",
     "# and easy to find. The data is retrieved from the database by using the\n",
     "# Spark JDBC connector and is loaded into a Spark DataFrame in the notebook\n",
-    "# called df_CARS_TWEETS using sqlContext.read.jdbc. The dataframe has the same\n",
+    "# called df_CARS_TWEETS using sqlContext.read.jdbc. The DataFrame has the same\n",
     "# column names as the tweets table in dashDB.\n",
     "\n",
     "props = {}\n",
