Use simple setup vars instead of inserting credential_map
The insert feature adds more steps to the setup instructions.
It also is potentially dangerous because of the way the user
needs to paste it into code.

It should probably come back in the future, but for now it
seems like this is more straightforward.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -76,30 +76,13 @@
     "# output, but you still should be careful how you save, share or allow access\n",
     "# to the notebook.\n",
     "\n",
-    "# SET-UP: \n",
-    "#\n",
-    "#  1) Set credential_map to your inserted credentials dict (see below).\n",
-    "#     It might be named credentials_1 or something else.\n",
-    "#  2) Edit the DASHDB_PREFIX to match the prefix you used when loading data.\n",
+    "# SET-UP: Add credentials, URL and prefix for dashDB here.\n",
     "\n",
-    "# Use the \"Find and Add Data\" upper right 10-over-01 icon and the\n",
-    "# \"Connections\" tab and click \"Insert to code\" to add dashDB data connection\n",
-    "# credentials here. Then use the credential dict (the name may be different)\n",
-    "# to set your credentials in the next cell. If you didn't setup a datasource\n",
-    "# in the project. You can edit in the individual strings instead.\n",
-    "\n",
-    "# Insert connection to dashDB here:\n",
-    "credential_map = None\n",
-    "\n",
-    "if not credential_map:\n",
-    "    raise Exception(\"dashDB credentials need to be added.\")\n",
-    "\n",
-    "DASHDB_PREFIX = \"CARS2015\"\n",
-    "\n",
-    "DASHDB_USERNAME = credential_map['username']\n",
-    "DASHDB_PASSWORD = credential_map['password']\n",
-    "DASHDB_SCHEMA = credential_map['username'].upper()\n",
-    "DASHDB_JDBC_URL = credential_map['ssljdbcurl']"
+    "DASHDB_USERNAME = \"<username>\"\n",
+    "DASHDB_PASSWORD = \"<password>\"\n",
+    "DASHDB_JDBC_URL = \"<ssl-jdbc-url>\"\n",
+    "DASHDB_PREFIX = \"dsx_twitter\"\n",
+    "DASHDB_SCHEMA = DASHDB_USERNAME.upper()"
    ]
   },
   {
@@ -160,11 +143,9 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from wordcloud import WordCloud, STOPWORDS\n",
-    "\n",
     "from IPython.core.display import Javascript\n",
     "\n",
     "from __future__ import division\n",
@@ -354,7 +335,7 @@
     "#    ('pos (42.000 42.000)') to a numeric value represented by the longitude\n",
     "#     and latitude coordinates. \n",
     "#\n",
-    "# You will use the resulting dataframe (df_cleaned_tweets) as the base data\n",
+    "# You will use the resulting DataFrame (df_cleaned_tweets) as the base data\n",
     "# source for all further step. The sample uses Spark to do all heavy\n",
     "# computation. When it is time to plot or collect the results, the returned\n",
     "# data is copied into the kernel memory, in other words moved from a Spark\n",
