PY3 compatability fixes (and more)
* Don't use unicode().
* Rewrite peak pie and wordcloud data prep to
  avoid PYTHONHASHSEED problem with PY3.
* Let to words fill the wordcloud instead of top 20.
* Use Matplotlib colormap for the pie chart.
* Add sort order to fix some sentiment colors to green/red/grey.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# Import and initialize modules\n",
-    "\n",
+    "from builtins import str\n",
     "from pyspark.sql import SQLContext\n",
     "from pyspark.sql import functions as F\n",
     "\n",
@@ -149,6 +149,7 @@
     "from IPython.core.display import Javascript\n",
     "\n",
     "from __future__ import division\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -397,9 +398,9 @@
     "    getDateIgnoreTime(row),\n",
     "    row.MESSAGE_BODY,\n",
     "    row.USER_GENDER,\n",
-    "    unicode(row.USER_STATE).upper(),\n",
-    "    unicode(row.USER_COUNTRY).upper(),\n",
-    "    unicode(row.USER_CITY).upper(),\n",
+    "    str(row.USER_STATE).upper(),\n",
+    "    str(row.USER_COUNTRY).upper(),\n",
+    "    str(row.USER_CITY).upper(),\n",
     "    row.MESSAGE_LANGUAGE,\n",
     "    getLongitude(row),\n",
     "    getLatitude(row),\n",
@@ -568,7 +569,8 @@
    "source": [
     "# Get number of tweets with P N U sentiment by grouping the sentiment value.\n",
     "tweets_grouped_by_sentiment = df_cleaned_tweets.groupBy(\n",
-    "    'SENTIMENT').agg(F.count('MESSAGE_ID').alias('NUM_TWEETS'))\n",
+    "    'SENTIMENT').agg(F.count('MESSAGE_ID').alias('NUM_TWEETS')).orderBy(\n",
+    "    'SENTIMENT', ascending=False)\n",
     "\n",
     "tweets_grouped_by_sentiment.cache()\n",
     "\n",
@@ -593,7 +595,7 @@
     "# Data plot 1\n",
     "plot1_labels = p_tweets_grouped_by_sentiment['SENTIMENT']\n",
     "plot1_values = p_tweets_grouped_by_sentiment['NUM_TWEETS']\n",
-    "plot1_colors = ['blue', 'red', 'gray', 'yellow', 'green']\n",
+    "plot1_colors = ['green', 'red', 'gray', 'yellow', 'blue']\n",
     "\n",
     "# Data plot 2\n",
     "cond1 = (p_tweets_grouped_by_sentiment['SENTIMENT'] == 'POSITIVE')\n",
@@ -603,7 +605,7 @@
     "    cond1 | cond2]\n",
     "plot2_labels = pMessage_sentiment_statistics_defined['SENTIMENT']\n",
     "plot2_values = pMessage_sentiment_statistics_defined['NUM_TWEETS']\n",
-    "plot2_colors = ['blue', 'red']\n",
+    "plot2_colors = ['green', 'red']\n",
     "\n",
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(23, 10))\n",
     "\n",
@@ -865,11 +867,11 @@
     "\n",
     "\n",
     "def getAllAttributes(tweet):\n",
-    "    message = unicode(tweet.MESSAGE_BODY).lower()\n",
+    "    message = str(tweet.MESSAGE_BODY).lower()\n",
     "    \n",
     "    # Message id and line\n",
     "    tmp = [tweet.MESSAGE_ID, tweet.MESSAGE_BODY, tweet.SENTIMENT,\n",
-    "           tweet.USER_GENDER, unicode(tweet.USER_COUNTRY).upper(),\n",
+    "           tweet.USER_GENDER, str(tweet.USER_COUNTRY).upper(),\n",
     "           tweet.POSTING_TIME, getInfluence(tweet)]\n",
     "\n",
     "    # Competitors in line\n",
@@ -1009,48 +1011,34 @@
     "tagsRDD = df_tweets_debacle.flatMap(\n",
     "    lambda t: re.split(\"\\s\", t.MESSAGE_BODY)).filter(\n",
     "    lambda word: not word.startswith(\"http\") and \n",
-    "    all(ord(c) < 128 for c in word) and \n",
+    "    all(ord(c) < 128 for c in word) and\n",
+    "    '&' not in word and\n",
     "    word not in stop_words and\n",
-    "    len(word) > 3).map(\n",
-    "    lambda word: (word, 1)).reduceByKey(add, 10).map(\n",
-    "    lambda (a, b): (b, a)).sortByKey(False).map(\n",
-    "    lambda (a, b): (b, a))\n",
+    "    len(word) > 3).map(lambda w: (w, 1))\n",
     "\n",
-    "# Get top words for word cloud (stopwords, etc. were removed above)\n",
-    "toptags = tagsRDD.take(20)\n",
+    "word_counts = dict(tagsRDD.countByKey())\n",
     "\n",
-    "# Take 'Volkswagen' out of the pie chart keywords and then keep top ten.\n",
-    "top10tags = [t for t in toptags if 'Volkswagen' not in t[0]]\n",
-    "\n",
+    "# Generate a pie chart\n",
     "params = plt.gcf()\n",
     "plSize = params.get_size_inches()\n",
     "params.set_size_inches((plSize[0] * 2, plSize[1] * 2))\n",
     "\n",
-    "labels = [i[0] for i in top10tags]\n",
-    "sizes = [int(i[1]) for i in top10tags]\n",
-    "colors = ['yellowgreen', 'gold', 'lightskyblue', 'lightcoral', \"beige\",\n",
-    "          \"paleturquoise\", \"pink\", \"lightyellow\", \"coral\"]\n",
+    "toptags = [x for x in word_counts.items() if 'Volkswagen' not in x[0] and x[1] > 160]\n",
+    "toptags = sorted(toptags, key=lambda x: x[1], reverse=True)\n",
+    "labels = [i[0] for i in toptags]\n",
+    "sizes = [i[1] for i in toptags]\n",
+    "slices = float(len(labels))\n",
+    "colors = matplotlib.cm.Set3(np.arange(slices)/slices)\n",
     "\n",
-    "plt.pie(sizes, labels=labels, colors=colors, autopct='%1.1f%%', shadow=True,\n",
+    "plt.pie(sizes, labels=labels, colors=colors, shadow=True,\n",
     "        startangle=90)\n",
-    "\n",
     "plt.axis('equal')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "plt.show()\n",
+    "\n",
     "# Generate a word cloud image\n",
     "word_cloud = WordCloud(background_color='white',\n",
     "                       normalize_plurals=True,\n",
-    "                       collocations=True).fit_words(dict(toptags))\n",
-    "\n",
+    "                       collocations=True).fit_words(word_counts)\n",
     "plt.figure(figsize=(12, 10))\n",
     "plt.imshow(word_cloud, interpolation='bilinear')\n",
     "plt.axis(\"off\")\n",
@@ -1664,7 +1652,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
