Fix pep8 problems

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -947,7 +947,7 @@
    "outputs": [],
    "source": [
     "mask_1day = p_df_tweets_over_time['POSTING_TIME'].map(lambda x: x.day) == 1\n",
-    "x = p_df_tweets_over_time[mask_1day]['POSTING_TIME']\n",
+    "t = p_df_tweets_over_time[mask_1day]['POSTING_TIME']\n",
     "\n",
     "# Plotting\n",
     "fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(20, 4))\n",
@@ -958,7 +958,7 @@
     "    axes.plot(range(len(y)), y, linewidth=2, color=colors[i])\n",
     "\n",
     "axes.set_xticks(x.index.tolist())\n",
-    "axes.set_xticklabels([day.strftime(\"%Y-%m-%d\") for day in x])\n",
+    "axes.set_xticklabels([day.strftime(\"%Y-%m-%d\") for day in t])\n",
     "axes.margins = 0\n",
     "axes.set_xlabel('Date/Time')\n",
     "axes.set_ylabel('Num of Tweets')\n",
@@ -1023,12 +1023,13 @@
     "plSize = params.get_size_inches()\n",
     "params.set_size_inches((plSize[0] * 2, plSize[1] * 2))\n",
     "\n",
-    "toptags = [x for x in word_counts.items() if 'Volkswagen' not in x[0] and x[1] > 160]\n",
+    "toptags = [\n",
+    "    w for w in word_counts.items() if 'Volkswagen' not in w[0] and w[1] > 160]\n",
     "toptags = sorted(toptags, key=lambda x: x[1], reverse=True)\n",
     "labels = [i[0] for i in toptags]\n",
     "sizes = [i[1] for i in toptags]\n",
     "slices = float(len(labels))\n",
-    "colors = matplotlib.cm.Set3(np.arange(slices)/slices)\n",
+    "colors = matplotlib.cm.Set3(np.arange(slices) / slices)\n",
     "\n",
     "plt.pie(sizes, labels=labels, colors=colors, shadow=True,\n",
     "        startangle=90)\n",
