Fixes for Spark 2 compatability
Works with both 1.6 and 2.0 now.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -311,7 +311,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
     "                     StructField('USER_FOLLOWERS_COUNT', IntegerType()),\n",
     "                     StructField('USER_FRIENDS_COUNT', IntegerType())])\n",
     "\n",
-    "df_cleaned_tweets = sqlContext.createDataFrame(df_JOIN_TWEETS.map(lambda row: [\n",
+    "df_cleaned_tweets = sqlContext.createDataFrame(df_JOIN_TWEETS.rdd.map(lambda row: [\n",
     "    row.MESSAGE_ID,\n",
     "    getDateIgnoreTime(row),\n",
     "    row.MESSAGE_BODY,\n",
@@ -826,7 +826,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
     "for carMakerName in car_makers_name_list:\n",
     "        columns_names.append(carMakerName)\n",
     "\n",
-    "df_tweets_car_maker = sqlContext.createDataFrame(df_cleaned_tweets.map(\n",
+    "df_tweets_car_maker = sqlContext.createDataFrame(df_cleaned_tweets.rdd.map(\n",
     "    lambda x: getAllAttributes(x)), columns_names)\n",
     "\n",
     "df_tweets_car_maker.cache();\n",
@@ -1008,7 +1008,7 @@
     "stop_words.add(\"over\")\n",
     "stop_words.add(\"will\")\n",
     "\n",
-    "tagsRDD = df_tweets_debacle.flatMap(\n",
+    "tagsRDD = df_tweets_debacle.rdd.flatMap(\n",
     "    lambda t: re.split(\"\\s\", t.MESSAGE_BODY)).filter(\n",
     "    lambda word: not word.startswith(\"http\") and \n",
     "    all(ord(c) < 128 for c in word) and\n",
@@ -1441,7 +1441,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1653,7 +1653,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
