--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -393,21 +393,20 @@
     "                     StructField('USER_FOLLOWERS_COUNT', IntegerType()),\n",
     "                     StructField('USER_FRIENDS_COUNT', IntegerType())])\n",
     "\n",
-    "df_cleaned_tweets = sqlContext.createDataFrame(df_JOIN_TWEETS.rdd.map(lambda row: [\n",
-    "    row.MESSAGE_ID,\n",
-    "    getDateIgnoreTime(row),\n",
-    "    row.MESSAGE_BODY,\n",
-    "    row.USER_GENDER,\n",
-    "    str(row.USER_STATE).upper(),\n",
-    "    str(row.USER_COUNTRY).upper(),\n",
-    "    str(row.USER_CITY).upper(),\n",
-    "    row.MESSAGE_LANGUAGE,\n",
-    "    getLongitude(row),\n",
-    "    getLatitude(row),\n",
-    "    row.SENTIMENT,\n",
-    "    row.USER_FOLLOWERS_COUNT,\n",
-    "    row.USER_FRIENDS_COUNT\n",
-    "]), schema)\n",
+    "df_cleaned_tweets = sqlContext.createDataFrame(df_JOIN_TWEETS.rdd.map(\n",
+    "    lambda row: [row.MESSAGE_ID,\n",
+    "                 getDateIgnoreTime(row),\n",
+    "                 row.MESSAGE_BODY,\n",
+    "                 row.USER_GENDER,\n",
+    "                 str(row.USER_STATE).upper(),\n",
+    "                 str(row.USER_COUNTRY).upper(),\n",
+    "                 str(row.USER_CITY).upper(),\n",
+    "                 row.MESSAGE_LANGUAGE,\n",
+    "                 getLongitude(row),\n",
+    "                 getLatitude(row),\n",
+    "                 row.SENTIMENT,\n",
+    "                 row.USER_FOLLOWERS_COUNT,\n",
+    "                 row.USER_FRIENDS_COUNT]), schema)\n",
     "\n",
     "df_cleaned_tweets.registerTempTable(DASHDB_PREFIX + '_TWEETS_CLEANED')\n",
     "if DEBUG:\n",
