Add missing dates to fix shifted timeline for maker breakdown.
Had to also use the correct variable to get the fixed timeline.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -928,6 +928,8 @@
     "        'POSTING_TIME', ascending=True)\n",
     "\n",
     "    p_overall_car_maker_time_data = overall_car_maker_time_data.toPandas()\n",
+    "    p_overall_car_maker_time_data = addMissingDates(\n",
+    "        p_df_tweets_over_time, p_overall_car_maker_time_data)\n",
     "    car_maker_results_list.append(p_overall_car_maker_time_data)\n",
     "    \n",
     "    overall_car_maker_time_data.unpersist()\n",
@@ -956,7 +958,7 @@
     "    y = car_maker_results_list[i]['COUNT']\n",
     "    axes.plot(range(len(y)), y, linewidth=2, color=colors[i])\n",
     "\n",
-    "axes.set_xticks(x.index.tolist())\n",
+    "axes.set_xticks(t.index.tolist())\n",
     "axes.set_xticklabels([day.strftime(\"%Y-%m-%d\") for day in t])\n",
     "axes.margins = 0\n",
     "axes.set_xlabel('Date/Time')\n",
