Reorganize cells to reduce gaps and improve PEP8
Cells were reorganized and combined to eliminate some
strange looking gaps in the shared html output (caused
apparently by some space for each cell).

The imports were moved to the top as is expected in Python.
Some unused imports were removed.

The PEP8 exclusions were reduced.

The example outputs were updated.
The md example was renamed to sample_output.md (and files).

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -1,47 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Twitter Data Sentiment Analysis\n",
-    "\n",
-    "Twitter tweets are an attractive data source to analyze\n",
-    "as Twitter users tweet about many different topics in which\n",
-    "they not only impart knowledge to others but also express\n",
-    "their feelings and opinions. Analyzing this data can result\n",
-    "in valuable insights and can be useful to detect trends and\n",
-    "drive business decisions. Notebooks are a powerful platform\n",
-    "for data scientists to analyze Twitter data.\n",
-    "\n",
-    "## Auto Industry Tweets\n",
-    "\n",
-    "This notebook analyzes Twitter data to glean insights about\n",
-    "the automotive industry. As the automotive industry is one of\n",
-    "the largest industries in the world and still very much a growth\n",
-    "industry, analyzing tweets about cars can assist manufacturers\n",
-    "to pay closer attention to market dynamics and position their\n",
-    "companies to take advantage of demographic changes and shifts\n",
-    "in consumer expectations.\n",
-    "\n",
-    "## Learning goals\n",
-    "\n",
-    "The notebook is structured into different sections. In the first\n",
-    "sections, you will perform a general analysis on the data set then\n",
-    "you will go deeper in the analysis to gain meaningful insights\n",
-    "about manufacturers.\n",
-    "\n",
-    "1. Determine the countries with the highest number of tweets\n",
-    "   (based on the user profile information).\n",
-    "\n",
-    "2. Analyze tweet sentiments\n",
-    "\n",
-    "3. Draw insights from tweets about major car manufacturers worldwide\n",
-    "   by combining Twitter timeline analysis with sentiment, gender\n",
-    "   distribution and location distribution."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -60,6 +19,34 @@
     "# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the\n",
     "# License for the specific language governing permissions and limitations\n",
     "# under the License."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from __future__ import division\n",
+    "from __future__ import unicode_literals\n",
+    "from builtins import str\n",
+    "from dateutil import parser\n",
+    "import re\n",
+    "\n",
+    "from IPython.core.display import Javascript\n",
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.functions import UserDefinedFunction\n",
+    "from pyspark.sql.types import IntegerType, FloatType, StringType, StructField, StructType, TimestampType  # noqa\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "\n",
+    "# Display Matplotlib output in the notebook\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -123,37 +110,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Twitter Data Sentiment Analysis\n",
+    "\n",
+    "Twitter tweets are an attractive data source to analyze\n",
+    "as Twitter users tweet about many different topics in which\n",
+    "they not only impart knowledge to others but also express\n",
+    "their feelings and opinions. Analyzing this data can result\n",
+    "in valuable insights and can be useful to detect trends and\n",
+    "drive business decisions. Notebooks are a powerful platform\n",
+    "for data scientists to analyze Twitter data.\n",
+    "\n",
+    "## Auto Industry Tweets\n",
+    "\n",
+    "This notebook analyzes Twitter data to glean insights about\n",
+    "the automotive industry. As the automotive industry is one of\n",
+    "the largest industries in the world and still very much a growth\n",
+    "industry, analyzing tweets about cars can assist manufacturers\n",
+    "to pay closer attention to market dynamics and position their\n",
+    "companies to take advantage of demographic changes and shifts\n",
+    "in consumer expectations.\n",
+    "\n",
+    "## Learning goals\n",
+    "\n",
+    "The notebook is structured into different sections. In the first\n",
+    "sections, you will perform a general analysis on the data set then\n",
+    "you will go deeper in the analysis to gain meaningful insights\n",
+    "about manufacturers.\n",
+    "\n",
+    "1. Determine the countries with the highest number of tweets\n",
+    "   (based on the user profile information).\n",
+    "\n",
+    "2. Analyze tweet sentiments\n",
+    "\n",
+    "3. Draw insights from tweets about major car manufacturers worldwide\n",
+    "   by combining Twitter timeline analysis with sentiment, gender\n",
+    "   distribution and location distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The data set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Import and initialize modules\n",
-    "from builtins import str\n",
-    "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql import functions as F\n",
+    "# Loading data into Spark DataFrames\n",
+    "#\n",
+    "# To access the data in dashDB, you must provide the dashDB service\n",
+    "# credentials. These were set in the first input cell to make them obvious\n",
+    "# and easy to find. The data is retrieved from the database by using the\n",
+    "# Spark JDBC connector and is loaded into a Spark DataFrame in the notebook\n",
+    "# called df_CARS_TWEETS using sqlContext.read.jdbc. The DataFrame has the same\n",
+    "# column names as the tweets table in dashDB.\n",
     "\n",
-    "from operator import add\n",
-    "import re\n",
-    "import time\n",
-    "from datetime import date\n",
-    "from dateutil import parser\n",
+    "props = {}\n",
+    "props['user'] = DASHDB_USERNAME\n",
+    "props['password'] = DASHDB_PASSWORD\n",
+    "jdbcurl = DASHDB_JDBC_URL\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
-    "from IPython.core.display import Javascript\n",
+    "# Wrap the SparkContext with a SQLContext\n",
+    "sqlContext = SQLContext(sc)  # noqa\n",
     "\n",
-    "from __future__ import division\n",
-    "from __future__ import unicode_literals\n",
+    "# Get the data frame\n",
+    "df_TWEETS = sqlContext.read.jdbc(jdbcurl, DASHDB_SCHEMA + '.' +\n",
+    "                                 DASHDB_PREFIX + '_' + 'TWEETS',\n",
+    "                                 properties=props)\n",
+    "df_SENTIMENTS = sqlContext.read.jdbc(jdbcurl, DASHDB_SCHEMA + '.' +\n",
+    "                                     DASHDB_PREFIX + '_' + 'SENTIMENTS',\n",
+    "                                     properties=props)\n",
+    "udf = UserDefinedFunction(\n",
+    "    lambda x: 0 if x == 'AMBIVALENT' else 1 if x == 'POSITIVE' else -1,\n",
+    "    IntegerType())\n",
+    "udf2 = UserDefinedFunction(\n",
+    "    lambda x: 'POSITIVE' if x > 0 else 'NEGATIVE' if x < 0 else 'AMBIVALENT',\n",
+    "    StringType())\n",
     "\n",
-    "%matplotlib inline\n",
+    "df = df_TWEETS.join(df_SENTIMENTS, \"MESSAGE_ID\")\n",
+    "df = df.withColumn('SENTIMENT_POLARITY', udf(df.SENTIMENT_POLARITY)).groupBy(\n",
+    "    'MESSAGE_ID').agg(F.mean('SENTIMENT_POLARITY').alias(\"SENTIMENT_POLARITY\"))\n",
+    "df = df.withColumn('SENTIMENT', udf2(df.SENTIMENT_POLARITY))\n",
+    "df_JOIN_TWEETS = df_TWEETS.join(df, \"MESSAGE_ID\")\n",
     "\n",
-    "sqlContext = SQLContext(sc)  # noqa"
+    "if DEBUG:\n",
+    "    df_TWEETS.printSchema()\n",
+    "    df_SENTIMENTS.printSchema()\n",
+    "    df_JOIN_TWEETS.printSchema()\n",
+    "    \n",
+    "# The following code cell counts the number of rows which were loaded into the\n",
+    "# DataFrame which is equivalent to the number of tweets available for further\n",
+    "# processing.\n",
+    "print(\"Number of tweets: \" + str(df_TWEETS.count()))\n",
+    "print(\"Number of sentiment records: \" + str(df_SENTIMENTS.count()))    \n",
+    "print(\n",
+    "    \"Aggregated tweets with sentiment scores: \" + str(df_JOIN_TWEETS.count()))"
    ]
   },
   {
@@ -186,17 +246,9 @@
     "\n",
     "# Plotting variables\n",
     "ind = np.arange(num_car_makers)  # index list for plotting\n",
-    "width = 0.8  # the width of the bars in the bar plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "width = 0.8  # the width of the bars in the bar plots\n",
+    "\n",
+    "\n",
     "# Helper functions\n",
     "\n",
     "# The helper function called GeoChart is used to plot the world map in a DOM\n",
@@ -228,83 +280,6 @@
     "            row['NUM_TWEETS'] = 0\n",
     "            temp = temp.append(row)\n",
     "    return temp.sort_values('POSTING_TIME')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The data set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Loading data into Spark DataFrames\n",
-    "#\n",
-    "# To access the data in dashDB, you must provide the dashDB service\n",
-    "# credentials. These were set in the first input cell to make them obvious\n",
-    "# and easy to find. The data is retrieved from the database by using the\n",
-    "# Spark JDBC connector and is loaded into a Spark DataFrame in the notebook\n",
-    "# called df_CARS_TWEETS using sqlContext.read.jdbc. The DataFrame has the same\n",
-    "# column names as the tweets table in dashDB.\n",
-    "\n",
-    "props = {}\n",
-    "props['user'] = DASHDB_USERNAME\n",
-    "props['password'] = DASHDB_PASSWORD\n",
-    "jdbcurl = DASHDB_JDBC_URL\n",
-    "\n",
-    "# Get the data frame\n",
-    "df_TWEETS = sqlContext.read.jdbc(jdbcurl, DASHDB_SCHEMA + '.' +\n",
-    "                                 DASHDB_PREFIX + '_' + 'TWEETS',\n",
-    "                                 properties=props)\n",
-    "df_SENTIMENTS = sqlContext.read.jdbc(jdbcurl, DASHDB_SCHEMA + '.' +\n",
-    "                                     DASHDB_PREFIX + '_' + 'SENTIMENTS',\n",
-    "                                     properties=props)\n",
-    "\n",
-    "if DEBUG:\n",
-    "    df_TWEETS.printSchema()\n",
-    "    df_SENTIMENTS.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql.functions import UserDefinedFunction\n",
-    "from pyspark.sql.types import IntegerType, FloatType, StringType, StructField, StructType, TimestampType  # noqa\n",
-    "udf = UserDefinedFunction(\n",
-    "    lambda x: 0 if x == 'AMBIVALENT' else 1 if x == 'POSITIVE' else -1,\n",
-    "    IntegerType())\n",
-    "udf2 = UserDefinedFunction(\n",
-    "    lambda x: 'POSITIVE' if x > 0 else 'NEGATIVE' if x < 0 else 'AMBIVALENT',\n",
-    "    StringType())\n",
-    "\n",
-    "df = df_TWEETS.join(df_SENTIMENTS, \"MESSAGE_ID\")\n",
-    "df = df.withColumn('SENTIMENT_POLARITY', udf(df.SENTIMENT_POLARITY)).groupBy(\n",
-    "    'MESSAGE_ID').agg(F.mean('SENTIMENT_POLARITY').alias(\"SENTIMENT_POLARITY\"))\n",
-    "df = df.withColumn('SENTIMENT', udf2(df.SENTIMENT_POLARITY))\n",
-    "df_JOIN_TWEETS = df_TWEETS.join(df, \"MESSAGE_ID\")\n",
-    "\n",
-    "if DEBUG:\n",
-    "    df_JOIN_TWEETS.printSchema()\n",
-    "    \n",
-    "# The following code cell counts the number of rows which were loaded into the\n",
-    "# DataFrame which is equivalent to the number of tweets available for further\n",
-    "# processing.\n",
-    "print(\"Number of tweets: \" + str(df_TWEETS.count()))\n",
-    "print(\"Number of sentiment records: \" + str(df_SENTIMENTS.count()))    \n",
-    "print(\n",
-    "    \"Aggregated tweets with sentiment scores: \" + str(df_JOIN_TWEETS.count()))"
    ]
   },
   {
