move wordcloud import
the wordcloud import should come after the `pip install wordcloud`
command, or you'll end up with a library not found error

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -43,7 +43,6 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
     "\n",
     "# Display Matplotlib output in the notebook\n",
     "%matplotlib inline"
@@ -88,7 +87,8 @@
     "# the kernel and if you restart the kernel, then you should start\n",
     "# at the top of the notebook again.\n",
     "\n",
-    "!pip install wordcloud"
+    "!pip install wordcloud\n",
+    "from wordcloud import WordCloud, STOPWORDS\n"
    ]
   },
   {
