Wordcloud import move and noqa E402 for pep8.
Need to move import to after wordcloud is installed.
Can't be in the captured_io cell because that is skipped
when we flake.sh.
Needs noqa to ignore the pep8 issue.

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -87,8 +87,7 @@
     "# the kernel and if you restart the kernel, then you should start\n",
     "# at the top of the notebook again.\n",
     "\n",
-    "!pip install wordcloud\n",
-    "from wordcloud import WordCloud, STOPWORDS\n"
+    "!pip install wordcloud\n"
    ]
   },
   {
@@ -106,7 +105,9 @@
     "# getting started, but may not want in the final exported results.\n",
     "DEBUG = False\n",
     "if DEBUG:\n",
-    "    captured_io()  # noqa F821"
+    "    captured_io()  # noqa F821\n",
+    "\n",
+    "from wordcloud import WordCloud, STOPWORDS  # noqa E402"
    ]
   },
   {
