Fix E722 do not use bare except

--- a/notebooks/dsx_twitter_auto_analysis.ipynb
+++ b/notebooks/dsx_twitter_auto_analysis.ipynb
@@ -332,7 +332,7 @@
     "            parts = getLongitudeLatitude(row.MESSAGE_LOCATION)\n",
     "            lon = float(parts[0])\n",
     "            return lon\n",
-    "        except:\n",
+    "        except Exception:\n",
     "            return None\n",
     "\n",
     "\n",
